# Agentic-RAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  embeddings.py  generator.py  main.py  retriever.py  utils.py  vector_store.py
data/: processed_texts.txt
data/vector_store/: index.faiss
notebooks/: evaluation.ipynb
scripts/: ingest.py
